--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ form {
 }
   
 .btn a {
-    color: white;
+    color: blue;
   font-family: 'Open Sans', sans-serif;
   font-size: 1rem;
   font-weight: 300;
